Archive2/6c/c9d6bd207ac6f1/output
main.cpp:2:5: error: 'main' must return 'int'
    void main()
    ^~~~
    int
main.cpp:4:14: warning: more '%' conversions than data arguments [-Wformat]
    printf("%d");
            ~^
main.cpp:11:5: error: 'main' must return 'int'
    void main()
    ^~~~
    int
main.cpp:14:17: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
    printf("%d",sizeof(num1));
            ~~  ^~~~~~~~~~~~
            %lu
main.cpp:16:5: error: no newline at end of file [-Werror,-Wnewline-eof]
    
    ^
2 warnings and 3 errors generated.
