Archive2/6c/c9d6bd207ac6f1/main.cpp
 #include<stdio.h>
    void main()
    {
    printf("%d");
    }




 #include<stdio.h>
    void main()
    {
    int num1 = 0x20 + 020 + 20;
    printf("%d",sizeof(num1));
    }
    